--- a/index.html
+++ b/index.html
@@ -6,11 +6,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dipta first portfolio</title>
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 
+    <section class="top_banner">
+        <div class="section_one">
+            <h1>Welcome To</h1>
+            <h1><span class="half">Peter Parker</span> World</h1>
+            <h3>Build Climber and Train Stopper</h3>
+            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
+                work.
+                That's why I am learning and mastering web development. I will not stop until I become the Web
+                Development
+                Hero.
+            </p>
+
+            <a class="link_button" target="_blank" href="www.google.com">Hire me</a>
+
+        </div>
+
+
+
+        <div class="section_one">
+            <img src="images/peter4-removebg-preview-removebg-preview.jpg" alt="photo">
+        </div>
+
+    </section>
 
 
 
