--- a/index.html
+++ b/index.html
@@ -21,24 +21,42 @@
             <h1>Welcome To</h1>
             <h1><span class="half">Peter Parker</span> World</h1>
             <h3>Build Climber and Train Stopper</h3>
-            <p>You might saw me jumping, climbing buildings, and stopping trains. But nobody pays me a dime for that
+            <p>You might saw me jumping, climbing buildings,
+                and stopping trains.
+                But nobody pays me a dime
+                for that
                 work.
                 That's why I am learning and mastering web development. I will not stop until I become the Web
                 Development
                 Hero.
             </p>
-
             <a class="link_button" target="_blank" href="www.google.com">Hire me</a>
-
         </div>
-
-
 
         <div class="section_one">
             <img src="images/peter4-removebg-preview-removebg-preview.jpg" alt="photo">
         </div>
 
     </section>
+
+    <!--1st part ses-->
+
+    <section class="middel_banner">
+        <div class="section_one">
+            <img src="images/jhankar.png" alt="">
+        </div>
+
+        <div class="section_one">
+            <h1>Dream Big</h1>
+            <h2>Become a web developer</h2>
+            <p>I already learned the basic HTML and CSS. I can build any simple website. I can even teach my grandma how
+                to make simple website. My goal is to build 3 websites and learn advanced topics.</p>
+            <a class="link_button" target="_blank" href="">Download Resume</a>
+        </div>
+    </section>
+
+
+
 
 
 
